# mlx-bench

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
scripts/: benchmark.py  benchmark_summary.py  build_cuda_linux.sh  build_cuda_windows.ps1  build_mac.sh  chat_mlx.sh  common.sh  download_binaries.sh  download_models.sh  mlx_chat.py  mlx_generate.py  plot_benchmark.py  run_benchmark.sh  run_llama.sh  start_llama_server.sh  start_openwebui.sh
