[project]
name = "mlx-bench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub[cli]>=1.9",
    "cmake",
    "ninja",
    "setuptools",
    "datasets>=2.14",
    "matplotlib>=3.8",
    "mlx-lm>=0.31.2",
]

[project.optional-dependencies]
webui = ["open-webui"]

[tool.setuptools]
packages = []
